--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NZWalksConnectionString": "Server=localhost;Database=NZWalksDb;User Id=sa;Password=roch1994_ofc;TrustServerCertificate=True"
+    "NZWalksConnectionString": "Server=localhost;Database=NZWalksDb;User Id=sa;Password=roch1994_ofc;TrustServerCertificate=True",
+    "NZWalksAuthConnectionString": "Server=localhost;Database=NZWalksAuthDb;User Id=sa;Password=roch1994_ofc;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "private-key",
+    "Issuer": "http://localhost:5039/",
+    "Audience": "http://localhost:5039/"
   }
 }
