--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -11,7 +11,7 @@
     "NZWalksAuthConnectionString": "Server=localhost;Database=NZWalksAuthDb;User Id=sa;Password=roch1994_ofc;TrustServerCertificate=True"
   },
   "Jwt": {
-    "Key": "private-key",
+    "Key": "YourLongSecureKeyMustBeAtLeast16BytesLongHere123456",
     "Issuer": "http://localhost:5039/",
     "Audience": "http://localhost:5039/"
   }
